--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
     <div id="sofascon">
-        <img id="sofas" src="photos/sofa.png" />
+        <img id="sofas" src="photos/sofa.jpg" />
         <div>
         <p id="title">SOFA</p>
         <p id="star">&#11088;&#11088;&#11088;&#11088; 4(500)</p>
